gender differences as resubmitted

--- a/Appendices/Background_treatmenteffects.tex
+++ b/Appendices/Background_treatmenteffects.tex
@@ -186,7 +186,7 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 
 \noindent In ABC, the families of $75\%$ of the control-group subjects enrolled their children in alternative center-based childcare. In CARE, $74\%$ of families in the control group and $62\%$ of families in the family education group enrolled their children in alternative center-based childcare. We refer to this phenomenon as control substitution; accounting for it is fundamental when evaluating the program.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_2001_EJ}, and \cite{Kline_Walters_2016_QJE}.} In this Appendix, we thoroughly describe the characteristics and costs of the childcare centers providing alternative treatment, in order to create a comparison with the treatments offered by ABC and CARE.\\
 
-\noindent Most of the families in the ABC and CARE control groups enrolled their children in alternative preschool that received federal subsidies and, therefore, were regulated. Figure~\ref{fig:ccabc} and Figure~\ref{fig:cccare} show the amount of enrollment into subsidized and non-subsidized care for ABC and CARE, respectively. Subsidized centers were required to have trained staff who were able to implement curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} Thus, we consider these centers to offer low-quality center-based childcare. \textbf{[JJH: Jorge, this is not quite consistent with our text--we call all of them low quality] [JLG: You are right and this is outdated. I have updated the sentence.]}
+\noindent Most of the families in the ABC and CARE control groups enrolled their children in alternative preschool that received federal subsidies and, therefore, were regulated. Figure~\ref{fig:ccabc} and Figure~\ref{fig:cccare} show the amount of enrollment into subsidized and non-subsidized care for ABC and CARE, respectively. Subsidized centers were required to have trained staff who were able to implement curricula designed to enhance cognitive, social, and linguistic competence in disadvantaged children.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev}.} Thus, we consider these centers to offer low-quality center-based childcare. 
 
 	\begin{figure}[H]
 		\caption{Average Number of Months in Alternative Preschool, ABC Control Group} \label{fig:ccabc}
@@ -206,7 +206,7 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 \noindent Note: This figure describes the take-up of alternative preschool by families in the CARE family education and control groups. The vertical axis represents the average number of months per year the subjects of the control group spent in alternative preschool. Subsidized centers were highly regulated and, therefore, relatively high-quality. Non-subsidized childcare services were center-based but not regulated. Other sources of childcare could have included care by parents, relatives, or non-relatives.}
 	\end{figure}
 	
-Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged, with the most stark difference being maternal employment. This is seen across genders, but is only significant for the female and pooled samples. \textbf{[JJH: What are the treatment effects for high quality versus low quality care?] [JLG: We did try this, but it's honestly impossible to get something useful because the cells get so thin. Even thinner if you consider that we need to split by gender and we have missing information in quality for a third of the sample.]} The males who are enrolled in alternative preschool have mothers with higher IQ scores, but lower parental income indicating lack of spousal support, which is evident by the fewer number of fathers present in that same group. Those who were enrolled in alternative preschools also had more siblings.
+Table~\ref{table:controlsubscharacteristics} shows baseline characteristics between the control-group subjects who were enrolled in alternative preschool and those who stayed at home. The control-group children who attended alternative preschool were marginally more advantaged, with the most stark difference being maternal employment. This is seen across genders, but is only significant for the female and pooled samples. The males who are enrolled in alternative preschool have mothers with higher IQ scores, but lower parental income indicating lack of spousal support, which is evident by the fewer number of fathers present in that same group. Those who were enrolled in alternative preschools also had more siblings.
 
 \begin{sidewaystable}[H]
 \centering
@@ -270,8 +270,6 @@ Note: The starred ratios represent the ones we believe were the most relevant fo
 \end{threeparttable}
 \end{table}
 
-\textbf{[JJH: Jorge, this is really highly competent]}
-
 \subsubsection{Costs}
 % Need citations
 \noindent Previous papers have used childcare cost rates that are not specific to North Carolina and do not account for the contemporaneous structure of the subsidies. We use the local subsidy rates that were in place when the ABC subjects were in preschool to impute different costs of the alternative preschools. These costs depend on the specific preschool attended and the eligibility of the families to receive the subsidies. \\
@@ -326,7 +324,7 @@ Note: This plot shows the number of participants in ABC for whom there exists da
 \input{output/crime_balance}
 \end{comment}
 
-\noindent Finally, we compare the observed, baseline characteristics between the children in the first-phase treatment, restricting the sample to the children for whom we have information on the age-34 medical data collection. \textbf{[JJH: Why carrow so many age ``0'' levels?] [JLG: I worry that the referees are skeptical about the pureness of the randomization protocol and that's why we are including as many evidence as possible on baseline balance. If you prefer we can place in a holding tank.]}
+\noindent Finally, we compare the observed, baseline characteristics between the children in the first-phase treatment, restricting the sample to the children for whom we have information on the age-34 medical data collection. 
 
 \input{output/health_balance}
 
