--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -8,7 +8,7 @@ Treatment reduces gaps between males and females. The difference between the mal
 
 \begin{sidewaystable}[!htbp]
 \centering
-\footnotesize
+\scriptsize
 \begin{threeparttable}
 \caption{Summary of Gender Differences in Outcome Aggregates} \label{table:summary}
  \label{tab:proportion-table-ranksign}
