--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -4,6 +4,7 @@ This section presents our estimates of treatment effects by gender. We categoriz
 \begin{threeparttable}
 \caption{Combining Functions and Exact Non-Parametric Tests} \label{table:massiveall}
 \centering
+\footnotesize
 \input{output/raw-rosenbaum-table-cats-exp-TvC-updated-10-10.tex}
 \begin{tablenotes}
 \scriptsize
