revision after eer done to cba

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -316,7 +316,7 @@ Labor Income (21) & 0.355 & 0.000 & 0.685 & 0.000 \\ \\
 $R^2$ & \multicolumn{2}{c}{0.221}  & \multicolumn{2}{c}{0.182}  \\
 Observations & \multicolumn{2}{c}{829} & \multicolumn{2}{c}{746} \\ 
 $H_0$: model is null & \multicolumn{2}{c}{$F$ = 46.570} & \multicolumn{2}{c}{$F$ = 32.830} \\
-& \multicolumn{2}{c}{$p$-value = 0.000} & \multicolumn{2}{c}{$p$-value = 0.000} \\ 
+& \multicolumn{2}{c}{$p$-value = 0.000} & \multicolumn{2}{c}{$p$-value = 0.000} \\ \\
  \multicolumn{5}{l}{\textbf{\textit{Unobserved Component:} $H_0:  F_{e,a}^d \left( \cdot \right) =  F_{n,a}^d \left( \cdot \right)$}} \\  
 Equality in means & $t$-stat & $p$-value & $t$-stat & $p$-value \\
  & 0.054  & 0.957 & -0.226 & 0.822   \\ \\
