jjh edits 6/19 as implemnted by the typists

--- a/heckman.bib
+++ b/heckman.bib
@@ -33658,17 +33658,6 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Timestamp                = {2014.06.19}
 }
 
-@Article{Gorman_1980_RESTUD,
-  Title                    = {A possible procedure for analysing quality differentials in the egg market},
-  Author                   = {Gorman, W. M.},
-  Journal                  = {The Review of Economic Studies},
-  Year                     = {1980},
-  Pages                    = {843-856},
-
-  Owner                    = {Alexandra},
-  Timestamp                = {2014.07.22}
-}
-
 @Article{Gorman_1980_REStud,
   Title                    = {A Possible Procedure for Analysing Quality Differentials in the Egg Market},
   Author                   = {W. M. Gorman},
@@ -33681,6 +33670,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
   Volume                   = {47},
 
   Owner                    = {Lynn}
+}
+
+@Article{Gorman_1980_RESTUD,
+  Title                    = {A possible procedure for analysing quality differentials in the egg market},
+  Author                   = {Gorman, W. M.},
+  Journal                  = {The Review of Economic Studies},
+  Year                     = {1980},
+  Pages                    = {843-856},
+
+  Owner                    = {Alexandra},
+  Timestamp                = {2014.07.22}
 }
 
 @Article{Gorman_1965_RES,
@@ -54155,6 +54155,17 @@ Lakdawalla, Darius N. and Panis, Constantijn and Shekelle, Paul G.},
 
   Owner                    = {Jenna},
   Timestamp                = {2017.05.08}
+}
+
+@TechReport{Liu-etal-2016-USC-Data-Models,
+  Title                    = {Forecasting with Dynamic Panel Data Models},
+  Author                   = {Liu, Laura and Moon, Hyungsik Roger and Schorfheide, Frank},
+  Institution              = {USC-INET Research Paper No. 17-02},
+  Year                     = {2016},
+  Month                    = {December},
+
+  Owner                    = {Jenna},
+  Timestamp                = {2018.06.19}
 }
 
 @Article{Liu_1960_Econometrica,
