anna edits to typists' changes

--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -95,7 +95,7 @@ The program is a prototype for many programs planned or in place today.\footnote
 
 This paper addresses a fundamental problem that arises in evaluating social programs. Few program evaluations have complete life-cycle histories of participants, for example. In our data, the oldest experimental subject is in his/her mid 30s. We forecast the full life-cycle benefits and costs of the program using non-experimental data guided by economic theory.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} discuss data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g.,\ \citealp{Prentice_1989_Surrogate_SiM}). However, as noted below, exogeneity is an integral part of the models we estimate, although it is not considered in the statistics literature. That literature does not provide testable predictions for validation of its forecasts as we do.} We compute internal rates of return and benefit/cost ratios that encompass the large array of benefits and costs generated. In creating our estimates, we account for model estimation and forecasting error and the welfare cost of taxation required to fund the program. We subject our estimates to extensive sensitivity analyses.
 
-We construct synthetic cohorts from non-experimental samples that approximate experimental samples in post-experimental years. Economic theory guides us in formulating and estimating invariant production functions that characterize program treatment effects. The estimated production functions depend on inputs changed by treatment that are measured in both experimental and non-experimental samples. The production functions themselves are assumed to be not affected by treatment -- a property we test and verify.\footnote{See \cite{Hurwicz_1962_structural} for the definition of policy invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. They do not construct out of sample forecasts.} We test invariance of the production functions using non-experimental samples that overlap, in part, with the experimental sample. We forecast experimental treatment effects using estimated production functions applied to non-experimental data.
+We construct synthetic cohorts from non-experimental samples that approximate experimental samples in post-experimental years. Economic theory guides us in formulating and estimating invariant production functions that characterize program treatment effects. The estimated production functions depend on inputs changed by treatment that are measured in both experimental and non-experimental samples. The production functions themselves are assumed to be unaffected by treatment -- a property we test and verify.\footnote{See \cite{Hurwicz_1962_structural} for the definition of policy invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. They do not construct out of sample forecasts.} We test invariance of the production functions using non-experimental samples that overlap, in part, with the experimental sample. We forecast experimental treatment effects using estimated production functions applied to non-experimental data.
 
 Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data using economic and econometric theory enhances the forecasting power of experiments. The quest for long-run answers from short-term experiments has recently led to informal procedures for estimating long-term benefits using short-term measures of childhood test scores \citep[e.g.][]{Chetty_Friedman_etal_2011_QJoE,Kline_Walters_2016_QJE}. We show by example that these practices can be quite misleading about true program benefits.
 
@@ -169,7 +169,7 @@ Because we do not observe each element of the eligibility index discussed in Sec
 
 We refine the samples by weighing each individual in the non-experimental samples according to his/her resemblance to the individuals in the experimental sample using Mahalanobis' matching Algorithm~\ref{alg:match} (see Appendix~\ref{appendix:methodology}). We use each of the following variables at all ages: year of birth, gender, and number of siblings at baseline. These variables are available across all non-experimental datasets. This procedure generates a synthetic cohort in the non-experimental sample for subsequent analysis of our structural forecasting procedure.
 
-In the non-experimental sample, by defintion, there is no treatment effect and matching to the experimental sample is done based on baseline variables not affected by treatment in the experimental sample. Figure~\ref{figure:controltests} confirms that the synthetic control group is comparable to the non-experimental sample for which $\bm{B}_{n} \in \mathcal{B}_0$. At age 30, observed labor income for the control group in the experimental sample coincides with labor income for the synthetic control group.\footnote{We observe labor income in the experimental ages at ages 21 and 30. We use the data at age 21 to initialize out forecasting model and hence cannot use it for testing our forecast.}
+In the non-experimental sample, by defintion, there is no treatment effect and matching to the experimental sample is done based on baseline variables not affected by treatment in the experimental sample. Figure~\ref{figure:controltests} confirms that the synthetic control group is comparable to the non-experimental sample for which $\bm{B}_{n} \in \mathcal{B}_0$. At age 30, observed labor income for the control group in the experimental sample coincides with labor income for the synthetic control group.\footnote{We observe labor income in the experimental ages at ages 21 and 30. We use the data at age 21 to initialize our forecasting model and hence cannot use it for testing our forecast.}
 
 \begin{sidewaysfigure}[!htbp]
 \centering
@@ -204,7 +204,7 @@ Note: Panel (a) displays the forecasted labor income for males in the auxiliary 
 
 Assignment to treatment has statistically and economically significant causal effects on the intermediate inputs. For females, it increases the average PIAT score by almost a third of standard deviation (the test is standardized to an in-sample standard deviation of 15 units). For males, the effect is almost half of a standard deviation. The program substantially boosts high-school graduation for females and college graduation for both males and females. Years of education attained summarizes both effects in a measure comparable across genders. Labor income at age 21 for girls is not greatly boosted by the program. This arises in part because treated girls are more likely to be enrolled in college at age 21 and thus not work at this age. However, as the life cycle evolves, lagged labor income is important for obtaining precise forecasts. The program boosts annual labor income, especially for males, for whom the average treatment effect at age 30 is almost 20 thousand dollars.\footnote{Table~\ref{table:summint} displays age-21 and age-30 labor income because labor income is observed at ages 21 and 30 in the experimental sample. Labor income at age 30 is an input in our methodology only after age 30.}\\
 
-\noindent \textbf{Step 3. Testing the Validity of the Technology Estimated in the Non-Experimental Sample.} Forecasting the life cycle outcomes for treatments and controls does not necessarily require that we take a position on the exogeneity of $\bm{X}^d_k, \: k \in \{e,n\}$ with respect to labor income. Biased structural estimates can still give reliable forecasts.\footnote{See \cite{Liu-etal-2016-USC-Data-Models}.} Simpler conditions, spelled out in Conditions~\ref{cond:cond1} and~\ref{cond:cond2} of Appendix~\ref{appendix:incomplete}, suffice. Exogeneity facilitates the use of economic theory to interpret treatment effects, to forecast outcomes in other samples where inputs are manipulated differently, to test the validity of our synthetic control groups, and to find auxiliary sample counterparts to treatments and controls. Exogeneity also makes identification of $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental sample straightforward. Assumption~\ref{ass:exog} formalizes one strong form this condition:
+\noindent \textbf{Step 3. Testing the Validity of the Technology Estimated in the Non-Experimental Sample.} Forecasting the life-cycle outcomes for treatments and controls does not necessarily require that we take a position on the exogeneity of $\bm{X}^d_k, \: k \in \{e,n\}$ with respect to labor income. Biased structural estimates can still give reliable forecasts.\footnote{See \cite{Liu-etal-2016-USC-Data-Models}.} Simpler conditions, spelled out in Conditions~\ref{cond:cond1} and~\ref{cond:cond2} of Appendix~\ref{appendix:incomplete}, suffice. Exogeneity facilitates the use of economic theory to interpret treatment effects, to forecast outcomes in other samples where inputs are manipulated differently, to test the validity of our synthetic control groups, and to find auxiliary sample counterparts to treatments and controls. Exogeneity also makes identification of $\bm{\phi}^d_{k,a}\left( \cdot, \cdot \right)$ in the non-experimental sample straightforward. Assumption~\ref{ass:exog} formalizes one strong form of this condition:
 
 \onehalfspacing
 \begin{assumption}\label{ass:exog} \textbf{Exogeneity}
@@ -247,11 +247,11 @@ Assumption~\ref{ass:summary} has two distinct aspects which could be broken down
 \end{remark}
 
 \begin{remark} \label{remark:cohort} \textbf{(No) Cohort Effects}
-The second aspect of Assumption~\ref{ass:summary}, that the structural relationships are identical in the experimental and non-experimental samples, embeds an assumption about the absence of cohort effects. Specifically, cohort structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the experiment. Note that this does not mean that there are not cohort effects in the outcome of interest, $\bm{Y}_{k,a}^d$. Instead, it means that there are not cohort effects in the mapping between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$.
+The second aspect of Assumption~\ref{ass:summary}, that the structural relationships are identical in the experimental and non-experimental samples, embeds an assumption about the absence of cohort effects. Specifically, a structural function $\bm{\phi}_{n,a}^d \left( \bm{x}, \bm{b} \right)$, which we identify and estimate in the non-experimental sample with subjects who are older than those in the experimental sample, is a valid tool for forecasting the experimental sample at older ages currently out of the experiment. Note that this does not mean that there are not cohort effects in the outcome of interest, $\bm{Y}_{k,a}^d$. Instead, it means that there are not cohort effects in the mapping between $\bm{X}_{k,a}, \bm{B}_k$ and $\bm{Y}_{k,a}^d$.
 \end{remark}
 \doublespacing
 
-Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, and the normalization $\mathbb{E}(\varepsilon^d_{k,a})=0$ for all $a \in \{1,\dots,\bar{A}\}$, generates testable implications. Exogeneity and invariance enable us to jointly test the two aspects of structural invariance, when $\bm{Y}^d_{k,a}$ is observed in both the experimental and auxiliary samples which we now state formally:
+Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, and the normalization $\mathbb{E}(\varepsilon^d_{k,a})=0$ for all $a \in \{1,\dots,\bar{A}\}$, generates testable implications. Exogeneity and invariance enable us to jointly test the two aspects of structural invariance, when $\bm{Y}^d_{k,a}$ is observed in both the experimental and auxiliary samples which we state formally:
 
 \begin{eqnarray}
 \mathbb{E} \left[ \bm{Y}_{e,a}^1 | \bm{X}_{e,a}^1 = \bm{x}, \bm{B}_{e} = \bm{b}, D = 1   \right] &=&  \mathbb{E} \left[ \bm{Y}_{e,a}^0 | \bm{X}_{e,a}^0 = \bm{x}, \bm{B}_{e} = \bm{b}, D = 0   \right] \label{eq:suff1}  \\
