--- a/abc_comprehensivecba_memo.tex
+++ b/abc_comprehensivecba_memo.tex
@@ -25,7 +25,7 @@
 
 \doublespacing
 
-\noindent This memo aims to clarify Table 2 in the CBA paper and answer the questions posed by JJH in his June 19, 2018 edits. I will place the questions rose and answers as the memo goes. Note that Table 2 is at the end of this memo.\\
+\noindent This memo aims to clarify Table 2 in the CBA paper and answer the questions posed by JJH in his June 19, 2018 edits. I will place the questions and answers throughout the memo. Note that Table 2 is at the end of this memo.\\
 
 \noindent I propose that we iterate on this before inserting this discussion of Table 2 into the paper. I don't want to frustrate you in two documents at the same time. Perhaps we can focus on this discussion in terms of Table 2 (the rest of your edits and answers to your other questions have been implemented in the paper).\\
 
@@ -35,39 +35,39 @@
 	\begin{equation} 
 	H_0: \phi_{k,a}^0 \left( \bm{x}, \bm{b} \right) = \phi_{k,a}^1 \left( \bm{x}, \bm{b} \right)  
 	\end{equation}
-\noindent We perform this test by asking whether a treatment indicator ($R$) is significant once baseline variables or inputs have been accounted for.  In Panel (a) of Table 2, we see that the coefficients associated with the ($R$) treatment indicator are effectively zero for both employment and labor income \textbf{[JJH: This section was labor income only + now it's employment!] [JLG: I decided to put employment in as complementary because we cannot display tests within the experimental sample separating by gender - too imprecise. Employment is related to labor income and thus I decided that. We can present labor income only if that's preferred.]}. For employment, the coefficient is $0.000$ with $p$-value $0.999$. For labor income, the coefficient is $821.087$ with $p$-value $0.926$. $821.087$ is actually a low value when noting that average labor income is $26,083$. Labor income is in 2014 dollars. The evidence here indicates that we fail to reject $H_0: \phi_{k,a}^0 \left( \bm{x}, \bm{b} \right) = \phi_{k,a}^1 \left( \bm{x}, \bm{b} \right)$. 
+\noindent We perform this test by asking whether a treatment indicator ($R$) is significant once baseline variables and inputs have been accounted for.  In Panel (a) of Table 2, we see that the coefficients associated with the treatment indicator ($R$) are effectively zero for both employment and labor income \textbf{[JJH: This section was labor income only + now it's employment!] [JLG: I decided to put employment in as complementary because we cannot display tests within the experimental sample separating by gender - too imprecise. Employment is related to labor income and thus I decided that. We can present labor income only if that's preferred.]}. For employment, the coefficient is $0.000$ with $p$-value $0.999$. For labor income, the coefficient is $821.087$ with $p$-value $0.926$. $821.087$ is actually a low value when noting that average labor income is $26,083$. Labor income is in 2014 dollars. The evidence here indicates that we fail to reject $H_0: \phi_{k,a}^0 \left( \bm{x}, \bm{b} \right) = \phi_{k,a}^1 \left( \bm{x}, \bm{b} \right)$. 
 
-\noindent After presenting the coefficients associated with $R$ we also present the coefficients associated with the rest of the elements in the technology - mother's education (at baseline), PIAT, years of education, and labor income at 21.\\
+\noindent After presenting the coefficients associated with $R$ we also present the coefficients associated with the rest of the elements in the technology: mother's education (at baseline), PIAT, years of education, and labor income at 21.\\
 
-\item Test of model relevance. We present the $R^2$, number of observations and the standard $F$-test on the relevance of the model. That is, we test 
+\item Test of model relevance. We present the $R^2$, number of observations, and the standard $F$-test on the relevance of the model. That is, we test 
 	\begin{eqnarray} 
 	H_0&:& \text{R = 0 and Mother's education (at birth) = 0 and PIAT (5-7) = 0} \nonumber \\ 
 	      & \text{and} & \text{Years of Education = 0 and Labor income at 21 = 0}
 	\end{eqnarray}
-\noindent and present the standard $F$-stat and $p$-value. This is \textbf{not testing invariance}. This is \textbf{testing whether the inputs to the estimated technology have a trivial relationship with the outcomes} of interest. We reject this null hypothesis because, as expected, the inputs do not have a trivial relationship with the outcomes of interest. Else, our forecasts would not work out. But perhaps this is a details and we should get rid of it because it is not a test of invariance and it is causing confusion. Without the intend to generate controversy, I added this test upon your request.\\
+\noindent and present the standard $F$-stat and $p$-value. This is \textbf{not testing invariance}. This is \textbf{testing whether the inputs to the estimated technology have a trivial relationship with the outcomes} of interest. We reject this null hypothesis because, as expected, the inputs have a trivial relationship with the outcomes of interest. Otherwise, our forecasts would not work out. Perhaps this test is a detail and we should get rid of it because it is not a test of invariance and might cause confusion. Without the intention of generating controversy, I added this test upon your request.\\
 
 \item Test of invariance in the distributions of $\varepsilon_{k,a}^d$ across treatment regimes within the experimental sample. That is, we test:
 	\begin{equation} 
-	H_0: F_{k,a}^d \left( \cdot \right) = F_{k,a} \left( \cdot \right)
+	H_0: F_{k,a}^d \left( \cdot \right) = F_{k,a} \left( \cdot \right).
 	\end{equation}
 \end{enumerate}
 
-\noindent I prepared two tests for this. First, a test of difference in means (standard $t$-test). \textbf{[JJH: Isn't equality of means imposed in the estimation?] [JLG: No. We are testing equality of means in the outcomes residualized from mother's education, PIAT, years of education, and labor income at 21, but \textit{not} of $R$. I think that's the correct test because our proposed technology in the paper does not have $R$ as input - which is our first test. Thus the correct empirical counterparts to $\varepsilon_{k,a}^d$ are residuals net of inputs but not net of $R$ I agree that if $R$ were an input then the means should be the same by construction.]} Second, an exact, non-parametric test on difference in the whole distribution (Kolgomorov-Smirnov). The evidence here indicates that we fail to reject $H_0: F_{k,a}^d \left( \cdot \right) = F_{k,a} \left( \cdot \right)$.\\ 
+\noindent I prepared two tests for this. First, a test of difference in means (standard $t$-test). \textbf{[JJH: Isn't equality of means imposed in the estimation?] [JLG: No. We are testing equality of means in the outcomes residualized from mother's education, PIAT, years of education, and labor income at 21, but \textit{not} of $R$. I think that's the correct test because our proposed technology in the paper does not have $R$ as input - which is our first test. Thus the correct empirical counterparts to $\varepsilon_{k,a}^d$ are residuals net of inputs but not net of $R$. I agree that if $R$ were an input then the means should be the same by construction.]} Second, an exact, non-parametric test on the difference in the whole distribution (Kolgomorov-Smirnov). The evidence here indicates that we fail to reject $H_0: F_{k,a}^d \left( \cdot \right) = F_{k,a} \left( \cdot \right)$.\\ 
 
-\noindent \textbf{Conclusion from Panel (a). \textit{Within the experiment} and at age 30 for labor income and employment: we fail to $H_0: \phi_{k,a}^0 \left( \bm{x}, \bm{b} \right) = \phi_{k,a}^1 \left( \bm{x}, \bm{b} \right)$ and $H_0: F_{k,a}^d \left( \cdot \right) = F_{k,a} \left( \cdot \right)$, i.e., we \textit{fail to reject the testable implications of Assumption A-2} in the paper with respect to treatment regimes. We fail to reject invariance across treatment regimes. We also reject that the inputs of the technologies have a trivial relationship with the outcomes (which may be a detail at this point).}
+\noindent \textbf{Conclusion from Panel (a). \textit{Within the experiment} and at age 30 for labor income and employment: we fail to $H_0: \phi_{k,a}^0 \left( \bm{x}, \bm{b} \right) = \phi_{k,a}^1 \left( \bm{x}, \bm{b} \right)$ and $H_0: F_{k,a}^d \left( \cdot \right) = F_{k,a} \left( \cdot \right)$, i.e., we \textit{fail to reject the testable implications of Assumption A-2} in the paper with respect to treatment regimes. We fail to reject invariance across treatment regimes. We also reject that the inputs of the technologies have no relationship with the outcomes (which may be a detail at this point).}
 
 \noindent Panel (b) of Table 2 presents three tests: 
 
 \begin{enumerate}
 \item Tests of invariance in the technologies across experimental and non-experimental samples. That is, we test:
 	\begin{equation} 
-	H_0: \phi_{e,a}^d \left( \bm{x}, \bm{b} \right) = \phi_{n,a}^d \left( \bm{x}, \bm{b} \right)  
+	H_0: \phi_{e,a}^d \left( \bm{x}, \bm{b} \right) = \phi_{n,a}^d \left( \bm{x}, \bm{b} \right).
 	\end{equation}
-\noindent We perform this test by asking whether a sample indicator ($K^*$) is significant once baseline variables or inputs have been accounted for \textbf{[JLG: Note that this is under the null of invariance across treatment regimes - which we have evidence in favor of in Panel (a). So here we pool treatment and control and synthetic treatment and synthetic control.] [JJH: What is the sample? Matched sample?] [JLG: No. It's our synthetic cohort pooled with the experimental ABC/CARE sample at age 30. This is what allows us to test invariance across experimental and non-experimental samples.]}. In Panel (b) of Table 2, we see that the coefficients associated with the ($K^*$) sample indicator are effectively zero for labor income for both females and males (here, our samples are larger and we can separate the tests by gender. \textbf{[JJH: What about employment?] [JLG: I can add it. Is it of interest once we are able to separate by gender? That's something we can add, no problem.]} For females, the coefficient is $-142.63$ with $p$-value $0.965$. For males, the coefficient is $1,887.575$ with $p$-value $0.654$. As reported in the paper, these coefficients are low once we take perspective on what the means of these variables are (we are talking about annual labor income). The evidence here indicates that we fail to reject $H_0: \phi_{e,a}^d \left( \bm{x}, \bm{b} \right) = \phi_{n,a}^d \left( \bm{x}, \bm{b} \right)$.\\ 
+\noindent We perform this test by asking whether a sample indicator ($K^*$) is significant once baseline variables or inputs have been accounted for \textbf{[JLG: Note that this is under the null of invariance across treatment regimes - which we have evidence in favor of in Panel (a). So here we pool treatment and control and synthetic treatment and synthetic control.] [JJH: What is the sample? Matched sample?] [JLG: No. It's our synthetic cohort pooled with the experimental ABC/CARE sample at age 30. This is what allows us to test invariance across experimental and non-experimental samples.]}. In Panel (b) of Table 2, we see that the coefficients associated with the ($K^*$) sample indicator are effectively zero for labor income for both females and males (here, our samples are larger and we can separate the tests by gender). \textbf{[JJH: What about employment?] [JLG: I can add it. Is it of interest once we are able to separate by gender? That's something we can add, no problem.]} For females, the coefficient is $-142.63$ with $p$-value $0.965$. For males, the coefficient is $1,887.575$ with $p$-value $0.654$. As reported in the paper, these coefficients are low once we take perspective on what the means of these variables are (we are talking about annual labor income). The evidence here indicates that we fail to reject $H_0: \phi_{e,a}^d \left( \bm{x}, \bm{b} \right) = \phi_{n,a}^d \left( \bm{x}, \bm{b} \right)$.\\ 
 
-\noindent After presenting the coefficients associated with $K^*$ we also present the coefficients associated with the rest of the elements in the technology - mother's education (at baseline), PIAT, years of education, and labor income at 21.\\
+\noindent After presenting the coefficients associated with $K^*$ we also present the coefficients associated with the rest of the elements in the technology: mother's education (at baseline), PIAT, years of education, and labor income at 21.\\
 
-\item Test of model relevance. We present the $R^2$, number of observations and the standard $F$-test on the relevance of the model. That is, we test 
+\item Test of model relevance. We present the $R^2$, number of observations, and the standard $F$-test on the relevance of the model. That is, we test 
 	\begin{eqnarray} 
 	H_0&:& \text{$K^*$ = 0 and Mother's education (at birth) = 0 and PIAT (5-7) = 0} \nonumber \\ 
 	      & \text{and} & \text{Years of Education = 0 and Labor income at 21 = 0}
@@ -76,7 +76,7 @@
 
 \item Test of invariance in the distributions of $\varepsilon_{k,a}^d$ across samples (under the null of invariance across treatment regimes) \textbf{[JJH: What is being repeated here?] [JLG: I believe that there is no repetition here. Panel (a) is testing invariance across treatment regimes at 30 within the experiment. Panel (b) is testing invariance across samples pooling the experiment data and non-experimental data (and treatment and control) under the null of invariance across treatment regimes.]}. That is, we test:
 	\begin{equation} 
-	H_0: F_{e,a}^d \left( \cdot \right) = F_{n,a}^d \left( \cdot \right)
+	H_0: F_{e,a}^d \left( \cdot \right) = F_{n,a}^d \left( \cdot \right).
 	\end{equation}
 \end{enumerate}
 
@@ -84,11 +84,11 @@
 
 \noindent \textbf{Conclusion from Panel (b). \textit{Across experimental and non-experimental samples} (using our synthetic cohort) and at age 30 for labor income for males and females, we fail to reject $H_0: \phi_{e,a}^d \left( \bm{x}, \bm{b} \right) = \phi_{n,a}^d \left( \bm{x}, \bm{b} \right)$. In 3 out of the 4 tests that we implement, we also fail to reject $H_0: F_{e,a}^d \left( \cdot \right) = F_{n,a}^d \left( \cdot \right)$. We also reject that the inputs of the technologies have a trivial relationship with the outcomes (which, again, may be a detail at this point).}\\ 
 
-\noindent \textbf{[JJH: Totally unclear!] [JLG: The table has too much information. Perhaps we can drop the second test in each panel to focus the discussion. Let me know if these explications help, please.]}\\
+\noindent \textbf{[JJH: Totally unclear!] [JLG: The table has too much information. Perhaps we can drop the second test in each panel to focus the discussion. Let me know if these explanations help, please.]}\\
 
-\noindent \textbf{[JJH: This looks like a disaster. What fails + on what sample?] [JLG: In Panel (a) we definitely fail to reject invariance, and we reject that the inputs and the outcome shave a trivial relationship. For that we use the experimental data at age 30. In Panel (b) we fail to reject invariance in all cases except for one. We also reject that the inputs and the outcome shave a trivial relationship. For that we pool experimental and non-experimental data at age 30, because we want to test invariance across samples.]}\\
+\noindent \textbf{[JJH: This looks like a disaster. What fails + on what sample?] [JLG: In Panel (a) we definitely fail to reject invariance, and we reject that the inputs and the outcome share a trivial relationship. For that we use the experimental data at age 30. In Panel (b) we fail to reject invariance in all cases except for one. We also reject that the inputs and the outcome share a trivial relationship. For that we pool experimental and non-experimental data at age 30, because we want to test invariance across samples.]}\\
 
-\noindent \textbf{JJH: Describe this test in greater detail. One at the time or all? Show formula?] [JLG: The null for each test are displayed above. I believe that, with the clarifications, you would agree that the tests are standard.]}
+\noindent \textbf{[JJH: Describe this test in greater detail. One at the time or all? Show formula?] [JLG: The null for each test are displayed above. I believe that, with the clarifications, you would agree that the tests are standard.]}
 
 \setcounter{table}{1}
 
