working on 6/20 edits

--- a/abc_comprehensivecba_memo.tex
+++ b/abc_comprehensivecba_memo.tex
@@ -44,7 +44,7 @@
 	H_0&:& \text{R = 0 and Mother's education (at birth) = 0 and PIAT (5-7) = 0} \nonumber \\ 
 	      & \text{and} & \text{Years of Education = 0 and Labor income at 21 = 0}
 	\end{eqnarray}
-\noindent and present the standard $F$-stat and $p$-value. This is \textbf{not testing invariance}. This is \textbf{testing whether the inputs to the estimated technology have a trivial relationship with the outcomes} of interest. We reject this null hypothesis because, as expected, the inputs have a trivial relationship with the outcomes of interest. Otherwise, our forecasts would not work out. Perhaps this test is a detail and we should get rid of it because it is not a test of invariance and might cause confusion. Without the intention of generating controversy, I added this test upon your request.\\
+\noindent and present the standard $F$-stat and $p$-value. This is \textbf{not testing invariance}. This is \textbf{testing whether the inputs to the estimated technology have a non-trivial relationship with the outcomes} of interest. We reject this null hypothesis because, as expected, the inputs have a non-trivial relationship with the outcomes of interest. Otherwise, our forecasts would not work out. Perhaps this test is a detail and we should get rid of it because it is not a test of invariance and might cause confusion. Without the intention of generating controversy, I added this test upon your request.\\
 
 \item Test of invariance in the distributions of $\varepsilon_{k,a}^d$ across treatment regimes within the experimental sample. That is, we test:
 	\begin{equation} 
@@ -52,7 +52,7 @@
 	\end{equation}
 \end{enumerate}
 
-\noindent I prepared two tests for this. First, a test of difference in means (standard $t$-test). \textbf{[JJH: Isn't equality of means imposed in the estimation?] [JLG: No. We are testing equality of means in the outcomes residualized from mother's education, PIAT, years of education, and labor income at 21, but \textit{not} of $R$. I think that's the correct test because our proposed technology in the paper does not have $R$ as input - which is our first test. Thus the correct empirical counterparts to $\varepsilon_{k,a}^d$ are residuals net of inputs but not net of $R$. I agree that if $R$ were an input then the means should be the same by construction.]} Second, an exact, non-parametric test on the difference in the whole distribution (Kolgomorov-Smirnov). The evidence here indicates that we fail to reject $H_0: F_{k,a}^d \left( \cdot \right) = F_{k,a} \left( \cdot \right)$.\\ 
+\noindent I prepared two tests for this. First, a test of difference in means (standard $t$-test). \textbf{[JJH: Isn't equality of means imposed in the estimation?] [JLG: No. We are testing equality of means in the outcomes residualized from mother's education, PIAT, years of education, and labor income at 21, but \textit{not} of $R$. I think that's the correct test because our proposed technology in the paper does not have $R$ as input - which is verified in our first test. Thus the correct empirical counterparts to $\varepsilon_{k,a}^d$ are residuals net of inputs but not net of $R$. I agree that if $R$ were an input then the means should be the same by construction.]} Second, an exact, non-parametric test on the difference in the whole distribution (Kolgomorov-Smirnov). The evidence here indicates that we fail to reject $H_0: F_{k,a}^d \left( \cdot \right) = F_{k,a} \left( \cdot \right)$.\\ 
 
 \noindent \textbf{Conclusion from Panel (a). \textit{Within the experiment} and at age 30 for labor income and employment: we fail to $H_0: \phi_{k,a}^0 \left( \bm{x}, \bm{b} \right) = \phi_{k,a}^1 \left( \bm{x}, \bm{b} \right)$ and $H_0: F_{k,a}^d \left( \cdot \right) = F_{k,a} \left( \cdot \right)$, i.e., we \textit{fail to reject the testable implications of Assumption A-2} in the paper with respect to treatment regimes. We fail to reject invariance across treatment regimes. We also reject that the inputs of the technologies have no relationship with the outcomes (which may be a detail at this point).}
 
